# Asteroid

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  application.yml  botinfo.txt  changelog.txt  config.py  help.txt  lavalink_server.py  lifetime_alive.py  main.py  main.sh  mongobot.py  osren.py  privacy_policy.md  pyproject.toml  requirements.txt  requirements.txt.txt  terms_of_service.md  test.py  test2.py  testBOT.py
cogs/: _auto_role.py  _newmusic.py  auto_role.py  examples.py  genshin.py  help.py  lavalink_music.py  listeners.py  misc.py  moderation.py  music.py  newmusic.py  private_rooms.py  reaction_role.py  settings.py  staff.py  starboard.py  tags.py  testmusic.py  utilites.py  utilities.py
ext_backup/: _blackjack.py  _hltv.py  button_music.py  giveaways.py  logs.py  misc.py  music.py  reaction_role.py  tags.py  tests.py
extensions/: _blackjack.py  _blackjack_online.py  _errors.py  _hltv.py  _levels.py  _paginator.py  _rockpaperscissors.py  _tictactoe.py  admin.py  administation.py  administration.py  blackjack.py  bot_settings.py  button_music.py  casino.py  games.py  giveaway.py  giveaways.py  help.py  hltv.py  hltv_parsing.py  level_system.py  levels.py  misc.py  moderation.py  music.py  music_du.py  new_music.py  other.py  reaction_role.py  tags.py
jsons/: config.json  prefixes.json  roles.json  servers.json
locales/: en-US.json  ru.json
my_utils/: __init__.py  asteroid_bot.py  checks.py  cog.py  consts.py  converters.py  errors.py  functions.py  languages.py  mongo.py  paginator.py  slash_override.py
source/: main.py  (+1 more)
(+189 files in other folders)
